--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -79,7 +79,7 @@
                 android:background="@drawable/shape"
                 android:ems="10"
                 android:hint="Fecha de nacimiento"
-                android:inputType="textPostalAddress"
+                android:inputType="date"
                 android:padding="8dp"
                 android:paddingStart="20dp"
                 android:textSize="16dp" />
@@ -107,47 +107,47 @@
                     android:text="Femenino" />
             </RadioGroup>
 
-                <EditText
-                    android:id="@+id/civil"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/shape"
-                    android:ems="10"
-                    android:hint="Estado civil"
-                    android:inputType="textPostalAddress"
-                    android:padding="8dp"
-                    android:paddingStart="20dp"
-                    android:textSize="16dp" />
+            <EditText
+                android:id="@+id/civil"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/shape"
+                android:ems="10"
+                android:hint="Estado civil"
+                android:inputType="text"
+                android:padding="8dp"
+                android:paddingStart="20dp"
+                android:textSize="16dp" />
 
-                <EditText
-                    android:id="@+id/blood"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/shape"
-                    android:ems="10"
-                    android:hint="Grupo sanguineo"
-                    android:inputType="textPostalAddress"
-                    android:padding="8dp"
-                    android:paddingStart="20dp"
-                    android:textSize="16dp" />
+            <EditText
+                android:id="@+id/blood"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/shape"
+                android:ems="10"
+                android:hint="Grupo sanguineo"
+                android:inputType="text"
+                android:padding="8dp"
+                android:paddingStart="20dp"
+                android:textSize="16dp" />
 
-                <EditText
-                    android:id="@+id/nameEmergency"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/shape"
-                    android:ems="10"
-                    android:hint="NOMBRE contacto de emergencia"
-                    android:inputType="textPostalAddress"
-                    android:padding="8dp"
-                    android:paddingStart="20dp"
-                    android:textSize="16dp" />
+            <EditText
+                android:id="@+id/nameEmergency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/shape"
+                android:ems="10"
+                android:hint="NOMBRE contacto de emergencia"
+                android:inputType="text"
+                android:padding="8dp"
+                android:paddingStart="20dp"
+                android:textSize="16dp" />
 
             <EditText
                 android:id="@+id/phoneEmergency"
@@ -158,7 +158,7 @@
                 android:background="@drawable/shape"
                 android:ems="10"
                 android:hint="NÚMERO contacto de emergencia"
-                android:inputType="textPostalAddress"
+                android:inputType="phone"
                 android:padding="8dp"
                 android:paddingStart="20dp"
                 android:textSize="16dp" />
